turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:6: error: forward reference extends over definition of variable IndiceCouleur
	triplet = rule(state)(IndiceCouleur)
                              ^